crates/snapshot-tests/tests/snapshots/annotate_snippets__bad_codepoint.snap
---
source: snapshot-tests/tests/annotate_snippets.rs
expression: rendered
---
error: invalid escape value: `\uD800` at `foo`
 --> bad_codepoint:1:9
  |
1 | foo = "\uD800"
  |         ^^^^ invalid escape value
